Upgrade dependencies
* Fix compilation warnings
* Fix compatibility with upgraded deps
* Fix repo URLs